// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VersionKey > should register class-level version keys 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "VersionKeyClassLevel",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "versionId",
      "max": null,
      "min": null,
      "name": "versionId",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
    {
      "key": "versionId",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
    "id",
    "versionId",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [
    "id",
    "versionId",
  ],
}
`;

exports[`VersionKey > should register field-level version key 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "VersionKeyFieldLevel",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "versionId",
      "max": null,
      "min": null,
      "name": "versionId",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
    {
      "key": "versionId",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
    "versionId",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [
    "versionId",
  ],
}
`;
